force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/CSM_Partnership_Objective_Snapshot__c.object-meta.xml
<CustomObject>
    <label>CSM Partnership Objective Snapshot</label>
    <nameField>
        <displayFormat>POSnap-{00000}</displayFormat>
        <label>CSM Partnership Objective Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM Partnership Objective Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>