force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Business_Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner__c</fullName>
    <label>Business Development Owner</label>
    <type>TextArea</type>
</CustomField>