force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Current_MEW_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_MEW_Updated_Date__c</fullName>
    <label>Current MEW Updated Date</label>
    <type>DateTime</type>
</CustomField>