force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Current_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Current_MEWs__c</fullName>
    <label>Current MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>