force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Current_Stablecoins_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoins_on_Platform__c</fullName>
    <label>Current Stablecoins on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>