force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Blockchains</fullName>
            </value>
            <value>
                <fullName>Crypto Custodians</fullName>
            </value>
            <value>
                <fullName>Crypto Exchanges</fullName>
            </value>
            <value>
                <fullName>DeFi Protocols</fullName>
            </value>
            <value>
                <fullName>Investment Platforms</fullName>
            </value>
            <value>
                <fullName>NGOs</fullName>
            </value>
            <value>
                <fullName>OTC Desks &amp; Market Makers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regional Stablecoins</fullName>
            </value>
            <value>
                <fullName>Remittance Platforms / Payment Technologies</fullName>
            </value>
            <value>
                <fullName>Strategic Enterprise Accounts</fullName>
            </value>
            <value>
                <fullName>Super Apps / Consumer Digital Wallets</fullName>
            </value>
            <value>
                <fullName>Web3 Platforms / Integrators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>