force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Last_30_Day_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_MEWs__c</fullName>
    <label>Last 30 Day MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>