force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Last_30_Day_Stablecoin_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Stablecoin_on_Platform__c</fullName>
    <label>Last 30 Day Stablecoin on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>