force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/MeWs_Metric_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>MeWs_Metric_Health_Status__c</fullName>
    <label>MeWs Metric Health Status</label>
    <type>TextArea</type>
</CustomField>