force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Monthly_Avg_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_MEWs__c</fullName>
    <label>Monthly Avg MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>