force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Monthly_Avg_Stablecoin_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Stablecoin_on_Platform__c</fullName>
    <label>Monthly Avg Stablecoin on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>