force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Most_Recent_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note_Date__c</fullName>
    <label>Most Recent Note Date</label>
    <type>DateTime</type>
</CustomField>