force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Objective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Objective_End_Date__c</fullName>
    <label>Objective End Date</label>
    <type>Date</type>
</CustomField>