force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Objective_Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>Objective_Health_Reason__c</fullName>
    <label>Objective Health Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Dependency</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Incentive Alignment</fullName>
            </value>
            <value>
                <fullName>Incorrect Hypothesis</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Market Dynamics</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner Engagement</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Technical Audit</fullName>
            </value>
            <value>
                <fullName>Use-Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>