force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Objective_Health_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Objective_Health_Reason_Details__c</fullName>
    <label>Objective Health Reason Details</label>
    <type>TextArea</type>
</CustomField>