force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Objective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Objective_Start_Date__c</fullName>
    <label>Objective Start Date</label>
    <type>Date</type>
</CustomField>