force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Objective_Status__c.field-meta.xml
<CustomField>
    <fullName>Objective_Status__c</fullName>
    <label>Objective Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <color>#FFCC66</color>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
                <color>#E27001</color>
                <label>Pre-Launch</label>
            </value>
            <value>
                <fullName>Launched</fullName>
                <color>#009900</color>
                <label>Launched</label>
            </value>
            <value>
                <fullName>Not Active</fullName>
                <color>#BBBBBB</color>
                <label>Not Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>