force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Other_Metric_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_Metric_Health_Status__c</fullName>
    <label>Other Metric Health Status</label>
    <type>TextArea</type>
</CustomField>