force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Partner_Marketing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_Owner__c</fullName>
    <label>Partner Marketing Owner</label>
    <type>TextArea</type>
</CustomField>