force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Partnership_Objective_Id__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Objective_Id__c</fullName>
    <label>Partnership Objective Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>