force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Partnership_Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Objective_Name__c</fullName>
    <label>Partnership Objective Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>