force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Partnership_Objective_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Objective_Owner_Name__c</fullName>
    <label>Partnership Objective: Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>