force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Performance_Objective_Health_Updated__c.field-meta.xml
<CustomField>
    <fullName>Performance_Objective_Health_Updated__c</fullName>
    <label>Performance Objective Health Updated</label>
    <type>DateTime</type>
</CustomField>