force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
            <value>
                <fullName>Liquidity</fullName>
            </value>
            <value>
                <fullName>Platform Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>