force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Report_to_Post_Deal_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Post_Deal_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report to Post-Deal Dashboard</label>
    <type>Checkbox</type>
</CustomField>