force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Solutions_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer__c</fullName>
    <label>Solutions Engineer</label>
    <type>TextArea</type>
</CustomField>