force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Stablecoin__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin__c</fullName>
    <label>Stablecoin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USDC</fullName>
            </value>
            <value>
                <fullName>EURC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>