force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Starting_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Starting_MEWs__c</fullName>
    <label>Starting MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>