force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <label>Success Metrics</label>
    <type>TextArea</type>
</CustomField>