force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon__c</fullName>
    <label>Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>