force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/Transaction_Volume_Metric_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Volume_Metric_Health_Status__c</fullName>
    <label>Transaction Volume Metric Health Status</label>
    <type>TextArea</type>
</CustomField>