force-app/main/default/objects/CSM_Partnership_Objective_Snapshot__c/fields/USDC_On_Platform_Metric_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>USDC_On_Platform_Metric_Health_Status__c</fullName>
    <label>USDC On Platform Metric Health Status</label>
    <type>TextArea</type>
</CustomField>